--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,14 @@
 # Docker compose seguro que solo expone el puerto 80 para el frontend con nginx. 
 
 services:
-  # Creo un contenedor de base de datos con usuario, contraseña y lo expongo en la red interna con puerto 5432
-  postgres:
-    image: postgres
-    restart: always
-    networks:
-      - internal
-    expose:
-      - "5432"
-    volumes:
-      - sql_app_name:/var/lib/postgresql/data
-    shm_size: 128mb
-    environment:
-      POSTGRES_PASSWORD: 38mOj2iGcnulVtni2RAMSCx7FBcH
-      POSTGRES_USER: sa
-      POSTGRES_DB: dbName
-
   # Dado una imagen de backend ya generada, le seteo variables de entorno para que se pueda conectar a la DB (estas variables son recibidas en application.properties de springboot)
   # El backend se expone en la red interna puerto 8080 (no se puede acceder desde el exterior, ni desde el propio host del contenedor)
   back:
     image: backend
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/dbName
-      - SPRING_DATASOURCE_USERNAME=sa
-      - SPRING_DATASOURCE_PASSWORD=38mOj2iGcnulVtni2RAMSCx7FBcH
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://cloudbdd.postgres.database.azure.com:5432/postgres
+      - SPRING_DATASOURCE_USERNAME=cloud
+      - SPRING_DATASOURCE_PASSWORD=electiva_2025
     depends_on:
       - postgres
     networks:
