Arreglo de bugs de login y variables de entorno

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,8 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+openrouter.api.key=${OPENROUTER_API_KEY}
+
 # Conexion directa a la DB (comentar la conexion desde docker)
 # spring.datasource.url=jdbc:postgresql://localhost:5432/dbName
 # spring.datasource.username=sa
