--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,12 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+openrouter.model=${OPENROUTER_MODEL}
+
+# SpringBoot + Spring Security + JWT token + Spring Data JPA + Swagger
+# Llave con la que se firman los tokens jwt, y luego se validan
+jwt.secretKey=${JWT_KEY}
+
 openrouter.api.key=${OPENROUTER_API_KEY}
 
 # Conexion directa a la DB (comentar la conexion desde docker)
