--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,40 +1,88 @@
 # Nombre del workflow (aparecerá en la pestaña "Actions" de GitHub)
-name: Build and Push Docker Image to Docker Hub
+name: CI/CD Completo: Build, Push y Despliegue SSH
 
 # Define cuándo se debe ejecutar este workflow
 on:
   push:
     branches:
       - main  # Se ejecuta solo en cada push a la rama 'main'
+  # Permite la ejecución manual desde la pestaña Actions
+  workflow_dispatch:
 
 # Define los trabajos (jobs) que se van a ejecutar
 jobs:
+  # =========================================================
+  # TRABAJO 1: BUILD Y PUSH A DOCKER HUB
+  # =========================================================
   build-and-push:
-    # El tipo de máquina virtual donde se ejecutará
+    name: Build y Push de Imágenes Docker
     runs-on: ubuntu-latest
 
-    # Los pasos a seguir
     steps:
-      # 1. Clona tu repositorio
-      - name: Check out repository
+      - name: 📝 Check out repository
         uses: actions/checkout@v4
 
-      # 2. Inicia sesión en Docker Hub
-      - name: Log in to Docker Hub
+      - name: 🔑 Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 3. Configura Docker Buildx (necesario para el paso siguiente)
-      - name: Set up Docker Buildx
+      - name: 🛠️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 4. Construye la imagen y la sube a Docker Hub
-      - name: Build and push Docker image
+      # --- CONSTRUYE Y SUBE IANVID/CLOUDBACK ---
+      - name: 🏗️ Build and push ianvid/cloudback:latest
         uses: docker/build-push-action@v5
         with:
-          context: .   # Usa el directorio raíz para el contexto de build
-          file: ./Dockerfile  # Apunta al Dockerfile en la raíz
-          push: true   # Indica que SÍ debe subir (push) la imagen
-          tags: ianvid/cloudback:latest # ! CAMBIA ESTO
+          # ATENCIÓN: Ajusta 'context' y 'file' si tu Dockerfile no está en el directorio raíz o './cloudback'
+          context: ./cloudback
+          file: ./cloudback/Dockerfile
+          push: true
+          tags: ianvid/cloudback:latest
+
+      # --- CONSTRUYE Y SUBE IANVID/CLOUDFRONT ---
+      - name: 🏗️ Build and push ianvid/cloudfront:latest
+        uses: docker/build-push-action@v5
+        with:
+          # ATENCIÓN: Ajusta 'context' y 'file' si tu Dockerfile no está en el directorio raíz o './cloudfront'
+          context: ./cloudfront
+          file: ./cloudfront/Dockerfile
+          push: true
+          tags: ianvid/cloudfront:latest
+
+  # =========================================================
+  # TRABAJO 2: DESPLIEGUE SSH (SÓLO SI EL PRIMER TRABAJO FUE EXITOSO)
+  # =========================================================
+  deploy:
+    name: Despliegue a Azure VM
+    runs-on: ubuntu-latest
+    
+    # ESTO ES CRUCIAL: Este job SOLO se ejecutará si 'build-and-push' termina correctamente.
+    needs: [build-and-push] 
+
+    steps:
+    - name: 🚀 SSH y Ejecución de Comandos de Despliegue
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        # Configuración de Conexión SSH (Secretos de GitHub)
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        
+        # Comandos a ejecutar en la sesión SSH remota
+        script: |
+          echo "Iniciando despliegue remoto..."
+          
+          # 1. Pull de las últimas imágenes (ya subidas por el trabajo anterior)
+          echo "Haciendo pull de las últimas imágenes de Docker Hub..."
+          sudo docker pull ianvid/cloudfront:latest
+          sudo docker pull ianvid/cloudback:latest
+          
+          # 2. Levantar los servicios con docker compose
+          # ATENCIÓN: Asegúrate de que este comando se ejecuta desde el directorio donde está tu docker-compose.yml
+          cd
+          echo "Levantando los servicios con docker compose..."
+          sudo docker compose up -d
+          
+          echo "Despliegue finalizado exitosamente."
